# shushi

./: .gitignore  Procfile  README.md  pyproject.toml  railpack.json  railway.toml
division_vertical_mcp/: compose.py  decimal_math.py  long_division.py  oss_store.py  render_config.py  school_column_ops.py  school_multiply.py  server.py  server_http.py  svg_render.py
docs/: OSS_UPLOAD_GUIDE.md
scripts/: generate_test3_from_index.py  push_gitlab_https.sh
test-3/: index.html
tests/: __init__.py  test_compose_verification_invariants.py  test_oss_store.py
