[project]
name = "division-vertical-mcp"
version = "0.1.0"
description = "MCP server: 生成网格对齐的除法竖式 SVG（含小数移位留痕与可选验算）"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "oss2>=2.18.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.29.0",
    "starlette>=0.37.0",
]

[project.scripts]
division-vertical-mcp = "division_vertical_mcp.server:main"
division-vertical-mcp-http = "division_vertical_mcp.server_http:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["division_vertical_mcp"]
